# minira

./: Cargo.toml  flake.nix  justfile  rust-toolchain.toml
.helix/: languages.toml
nix/: dependencies.nix  packages.nix  shell.nix
src/: code_action.rs  diagnostic.rs  error.rs  file_sync.rs  format.rs  hover.rs  lib.rs  lsp.rs  main.rs  rustc.rs  symbol.rs
src/lsp/: code_action.rs  diagnostic.rs  file_sync.rs  format.rs
